Actualiza index.html y style.css con mapa y ajustes de imágenes

--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CONSTRUCCIONES AYC SPA</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>CONSTRUCCIONES AYC SPA</title>
+<link rel="stylesheet" href="style.css">
+<script defer src="script.js"></script>
 </head>
 <body>
 
-<!-- HEADER SUPERIOR -->
+<!-- HEADER -->
 <header class="header">
     <div class="header-container">
         <img src="images/logo.jpeg" alt="Logo AYC" class="logo">
         <div class="empresa">
             <h1>CONSTRUCCIONES AYC SPA</h1>
-            <p>Fabricación y Montaje de Estructuras Metálicas</p>
         </div>
     </div>
 </header>
 
-<!-- HERO / PORTADA -->
+<!-- HERO -->
 <section class="hero">
     <div class="hero-overlay">
         <h2>ESTRUCTURAS METÁLICAS Y CONSTRUCCIÓN</h2>
@@ -27,44 +27,40 @@
     </div>
 </section>
 
-<!-- PILARES (TU TEXTO EXACTO) -->
+<!-- VALORES -->
 <section class="valores">
-    <h2 class="titulo">NUESTROS PILARES</h2>
-
+    <h2 class="titulo">NUESTROS VALORES</h2>
     <div class="cards">
         <div class="card">
+            <div class="icono">🛠️</div>
             <h3>COMPROMISO Y CALIDAD</h3>
             <p>
-                NUESTRA PASION POR LA CONSTRUCCION NOS DISTINGUE. TRABAJAMOS CON ALTOS 
-                ESTANDARES DE CALIDAD CUMPLIENDO PLAZOS Y OPTIMIZANDO COSTOS. 
+                NUESTRA PASION POR LA CONSTRUCCION NOS DISTINGUE. TRABAJAMOS CON ALTOS ESTANDARES DE CALIDAD CUMPLIENDO PLAZOS Y OPTIMIZANDO COSTOS. 
                 NUESTRO COMPROMISO ES ENTREGAR RESULTADOS QUE SUPEREN TUS EXPECTATIVAS.
             </p>
         </div>
-
         <div class="card">
+            <div class="icono">📐</div>
             <h3>ASESORIA TECNICA</h3>
             <p>
-                TE ASESORAMOS DESDE EL PRIMER MOMENTO. ANALIZAMOS TUS IDEAS Y LO 
-                TRANSFORMAMOS EN UN GRAN PROYECTO. GUIANDOTE EN CADA ETAPA PARA 
-                GARANTIZAR UNA EJECUCION PRECISA Y ACORDE A TUS REQUERIMIENTOS.
+                TE ASESORAMOS DESDE EL PRIMER MOMENTO. ANALIZAMOS TUS IDEAS Y LO TRANSFORMAMOS EN UN GRAN PROYECTO. 
+                GUIANDOTE EN CADA ETAPA PARA GARANTIZAR UNA EJECUCION PRECISA Y ACORDE A TUS REQUERIMIENTOS.
             </p>
         </div>
-
         <div class="card">
+            <div class="icono">👷</div>
             <h3>MANO DE OBRA CALIFICADA</h3>
             <p>
-                CONTAMOS CON UN EQUIPO EXPERTO EN FABRICACION Y MONTAJE DE ESTRUCTURAS 
-                METALICAS, CON AMPLIA EXPERIENCIA. DESDE SOLDADORES, MONTAJISTAS Y 
-                JEFE DE TERRENO, DEMOSTRANDO PROFESIONALISMO EN CADA PROYECTO.
+                CONTAMOS CON UN EQUIPO EXPERTO EN FABRICACION Y MONTAJE DE ESTRUCTURAS METALICAS, CON AMPLIA EXPERIENCIA. 
+                DESDE SOLDADORES, MONTAJISTAS Y JEFE DE TERRENO, DEMOSTRANDO PROFESIONALISMO EN CADA PROYECTO.
             </p>
         </div>
     </div>
 </section>
 
-<!-- GALERIA DE PROYECTOS (TUS IMÁGENES) -->
+<!-- GALERÍA -->
 <section class="galeria">
-    <h2 class="titulo">PROYECTOS REALIZADOS</h2>
-
+    <h2 class="titulo">NUESTROS PROYECTOS</h2>
     <div class="galeria-grid">
         <img src="images/obra1.jpeg" alt="Obra 1">
         <img src="images/obra2.jpg" alt="Obra 2">
@@ -73,25 +69,48 @@
         <img src="images/obra5.jpg" alt="Obra 5">
         <img src="images/obra6.jpg" alt="Obra 6">
         <img src="images/obra7.jpg" alt="Obra 7">
-        <img src="images/montaje-termoacustic.jpeg" alt="Montaje Termoacustico">
+        <img src="images/montaje-termoacustic.jpeg" alt="Montaje termoacústico">
+        <img src="images/captura.png" alt="Detalle proyecto">
     </div>
 </section>
 
-<!-- SECCION EXPERIENCIA -->
+<!-- EXPERIENCIA -->
 <section class="experiencia">
     <div class="experiencia-contenido">
         <div class="texto">
             <h2>EXPERIENCIA EN TERRENO</h2>
             <p>
-                Realizamos fabricación, montaje y colocaje de estructuras metálicas,
-                galpones, techumbres y proyectos industriales, garantizando calidad,
-                seguridad y cumplimiento de plazos en cada obra ejecutada.
+                Realizamos fabricación, montaje y colocaje de estructuras metálicas, galpones, techumbres y proyectos industriales, garantizando calidad, seguridad y cumplimiento de plazos en cada obra ejecutada.
             </p>
         </div>
-
         <div class="imagen">
-            <img src="images/captura.png" alt="Trabajo en obra">
+            <img src="images/obra2.jpg" alt="Experiencia en terreno">
         </div>
+    </div>
+</section>
+
+<!-- CONTACTO -->
+<section class="contacto">
+    <h2 class="titulo">CONTACTO</h2>
+    <div class="contacto-contenido">
+        <p><strong>Representante:</strong> Camila Bustamante J.</p>
+        <p><strong>WhatsApp / Teléfono:</strong> <a href="https://wa.me/56987308343" target="_blank">+56 9 8730 8343</a></p>
+        <p><strong>Empresa:</strong> CONSTRUCCIONES AYC SPA</p>
+        <p>Fabricación, montaje y asesoría en estructuras metálicas</p>
+    </div>
+</section>
+
+<!-- MAPA CON PIN ROJO ESTÁTICO -->
+<section class="mapa">
+    <div class="mapa-container">
+        <iframe 
+            src="https://www.google.com/maps?q=-40.5761897,-73.1149469&hl=es&z=16&output=embed"
+            width="780" 
+            height="350" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy">
+        </iframe>
     </div>
 </section>
 
