Actualiza index.html y style.css con mapa y ajustes de imágenes

--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>CONSTRUCCIONES AYC SPA</title>
 <link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 <script defer src="script.js"></script>
 </head>
 <body>
+
+<!-- BOTÓN WHATSAPP -->
+<a href="https://wa.me/56987308343" class="whatsapp-btn" target="_blank">💬 WhatsApp</a>
 
 <!-- HEADER -->
 <header class="header">
@@ -22,8 +26,9 @@
 <!-- HERO -->
 <section class="hero">
     <div class="hero-overlay">
-        <h2>ESTRUCTURAS METÁLICAS Y CONSTRUCCIÓN</h2>
+        <h2 class="hero-title">ESTRUCTURAS METÁLICAS Y CONSTRUCCIÓN</h2>
         <p>Calidad, compromiso y profesionalismo en cada proyecto</p>
+        <a href="#contacto" class="btn-contacto">Contáctanos</a>
     </div>
 </section>
 
@@ -31,28 +36,25 @@
 <section class="valores">
     <h2 class="titulo">NUESTROS VALORES</h2>
     <div class="cards">
-        <div class="card">
+        <div class="card fade-in">
             <div class="icono">🛠️</div>
             <h3>COMPROMISO Y CALIDAD</h3>
             <p>
-                NUESTRA PASION POR LA CONSTRUCCION NOS DISTINGUE. TRABAJAMOS CON ALTOS ESTANDARES DE CALIDAD CUMPLIENDO PLAZOS Y OPTIMIZANDO COSTOS. 
-                NUESTRO COMPROMISO ES ENTREGAR RESULTADOS QUE SUPEREN TUS EXPECTATIVAS.
+                NUESTRA PASIÓN POR LA CONSTRUCCIÓN NOS DISTINGUE. TRABAJAMOS CON ALTOS ESTÁNDARES DE CALIDAD, CUMPLIENDO PLAZOS Y OPTIMIZANDO COSTOS.
             </p>
         </div>
-        <div class="card">
+        <div class="card fade-in">
             <div class="icono">📐</div>
-            <h3>ASESORIA TECNICA</h3>
+            <h3>ASESORÍA TÉCNICA</h3>
             <p>
-                TE ASESORAMOS DESDE EL PRIMER MOMENTO. ANALIZAMOS TUS IDEAS Y LO TRANSFORMAMOS EN UN GRAN PROYECTO. 
-                GUIANDOTE EN CADA ETAPA PARA GARANTIZAR UNA EJECUCION PRECISA Y ACORDE A TUS REQUERIMIENTOS.
+                TE ASESORAMOS DESDE EL PRIMER MOMENTO. TRANSFORMAMOS TUS IDEAS EN PROYECTOS CONCRETO, GUIÁNDOTE EN CADA ETAPA.
             </p>
         </div>
-        <div class="card">
+        <div class="card fade-in">
             <div class="icono">👷</div>
             <h3>MANO DE OBRA CALIFICADA</h3>
             <p>
-                CONTAMOS CON UN EQUIPO EXPERTO EN FABRICACION Y MONTAJE DE ESTRUCTURAS METALICAS, CON AMPLIA EXPERIENCIA. 
-                DESDE SOLDADORES, MONTAJISTAS Y JEFE DE TERRENO, DEMOSTRANDO PROFESIONALISMO EN CADA PROYECTO.
+                CONTAMOS CON EQUIPO EXPERTO EN FABRICACIÓN Y MONTAJE DE ESTRUCTURAS METÁLICAS. PROFESIONALISMO EN CADA PROYECTO.
             </p>
         </div>
     </div>
@@ -62,25 +64,25 @@
 <section class="galeria">
     <h2 class="titulo">NUESTROS PROYECTOS</h2>
     <div class="galeria-grid">
-        <img src="images/obra1.jpeg" alt="Obra 1">
-        <img src="images/obra2.jpg" alt="Obra 2">
-        <img src="images/obra3.jpg" alt="Obra 3">
-        <img src="images/obra4.jpg" alt="Obra 4">
-        <img src="images/obra5.jpg" alt="Obra 5">
-        <img src="images/obra6.jpg" alt="Obra 6">
-        <img src="images/obra7.jpg" alt="Obra 7">
-        <img src="images/montaje-termoacustic.jpeg" alt="Montaje termoacústico">
-        <img src="images/captura.png" alt="Detalle proyecto">
+        <img src="images/obra1.jpeg" alt="Obra 1" class="galeria-item">
+        <img src="images/obra2.jpg" alt="Obra 2" class="galeria-item">
+        <img src="images/obra3.jpg" alt="Obra 3" class="galeria-item">
+        <img src="images/obra4.jpg" alt="Obra 4" class="galeria-item">
+        <img src="images/obra5.jpg" alt="Obra 5" class="galeria-item">
+        <img src="images/obra6.jpg" alt="Obra 6" class="galeria-item">
+        <img src="images/obra7.jpg" alt="Obra 7" class="galeria-item">
+        <img src="images/montaje-termoacustic.jpeg" alt="Montaje termoacústico" class="galeria-item">
+        <img src="images/captura.png" alt="Detalle proyecto" class="galeria-item">
     </div>
 </section>
 
 <!-- EXPERIENCIA -->
 <section class="experiencia">
-    <div class="experiencia-contenido">
+    <div class="experiencia-contenido fade-in">
         <div class="texto">
             <h2>EXPERIENCIA EN TERRENO</h2>
             <p>
-                Realizamos fabricación, montaje y colocaje de estructuras metálicas, galpones, techumbres y proyectos industriales, garantizando calidad, seguridad y cumplimiento de plazos en cada obra ejecutada.
+                FABRICACIÓN, MONTAJE Y COLOCAJE DE ESTRUCTURAS METÁLICAS, GALPONES, TECHUMBRES Y PROYECTOS INDUSTRIALES. CALIDAD, SEGURIDAD Y CUMPLIMIENTO GARANTIZADO.
             </p>
         </div>
         <div class="imagen">
@@ -90,9 +92,8 @@
 </section>
 
 <!-- CONTACTO + FORMULARIO + MAPA -->
-<section class="contacto-final">
-    <div class="contacto-container">
-        <!-- FORMULARIO -->
+<section class="contacto-final" id="contacto">
+    <div class="contacto-container fade-in">
         <div class="contacto-formulario">
             <h2 class="titulo">CONTÁCTANOS</h2>
             <form action="https://formspree.io/f/maylnrvq" method="POST">
@@ -115,7 +116,6 @@
             </div>
         </div>
 
-        <!-- MAPA -->
         <div class="contacto-mapa">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11453.183604761592!2d-73.1149469!3d-40.5761897!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x968f1c5c6a7dff1f%3A0x0!2zTcKwMzQnMzUuMCJTIDczwrA2NicxMC4wIlc!5e0!3m2!1ses-419!2scl!4v1700000000000"
@@ -133,6 +133,12 @@
 <footer class="footer">
     <p>© 2026 CONSTRUCCIONES AYC SPA | Estructuras Metálicas y Construcción</p>
 </footer>
+
+<!-- LIGHTBOX -->
+<div id="lightbox" class="lightbox">
+    <span class="close">&times;</span>
+    <img class="lightbox-img" src="">
+</div>
 
 </body>
 </html>
