Actualización completa: diseño tipografía, Por Qué Elegirnos, galería, experiencia, contacto y mapa

--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>CONSTRUCCIONES AYC SPA</title>
 <!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Roboto:wght@400;500&family=Open+Sans:wght@400&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
-<script defer src="script.js"></script>
 </head>
 <body>
 
@@ -37,24 +36,21 @@
             <div class="icono">🛠️</div>
             <h3>COMPROMISO Y CALIDAD</h3>
             <p>
-                NUESTRA PASION POR LA CONSTRUCCION NOS DISTINGUE. TRABAJAMOS CON ALTOS ESTANDARES DE CALIDAD CUMPLIENDO PLAZOS Y OPTIMIZANDO COSTOS. 
-                NUESTRO COMPROMISO ES ENTREGAR RESULTADOS QUE SUPEREN TUS EXPECTATIVAS.
+                NUESTRA PASIÓN POR LA CONSTRUCCIÓN NOS DISTINGUE. TRABAJAMOS CON ALTOS ESTÁNDARES DE CALIDAD CUMPLIENDO PLAZOS Y OPTIMIZANDO COSTOS.
             </p>
         </div>
         <div class="card">
             <div class="icono">📐</div>
-            <h3>ASESORIA TECNICA</h3>
+            <h3>ASESORÍA TÉCNICA</h3>
             <p>
-                TE ASESORAMOS DESDE EL PRIMER MOMENTO. ANALIZAMOS TUS IDEAS Y LO TRANSFORMAMOS EN UN GRAN PROYECTO. 
-                GUIANDOTE EN CADA ETAPA PARA GARANTIZAR UNA EJECUCION PRECISA Y ACORDE A TUS REQUERIMIENTOS.
+                TE ASESORAMOS DESDE EL PRIMER MOMENTO. ANALIZAMOS TUS IDEAS Y LO TRANSFORMAMOS EN UN GRAN PROYECTO.
             </p>
         </div>
         <div class="card">
             <div class="icono">👷</div>
             <h3>MANO DE OBRA CALIFICADA</h3>
             <p>
-                CONTAMOS CON UN EQUIPO EXPERTO EN FABRICACION Y MONTAJE DE ESTRUCTURAS METALICAS, CON AMPLIA EXPERIENCIA. 
-                DESDE SOLDADORES, MONTAJISTAS Y JEFE DE TERRENO, DEMOSTRANDO PROFESIONALISMO EN CADA PROYECTO.
+                CONTAMOS CON UN EQUIPO EXPERTO EN FABRICACIÓN Y MONTAJE DE ESTRUCTURAS METÁLICAS, DEMOSTRANDO PROFESIONALISMO EN CADA PROYECTO.
             </p>
         </div>
     </div>
@@ -64,14 +60,8 @@
 <section class="porque-elegirnos">
     <h2 class="titulo">¿Por Qué Elegirnos?</h2>
     <div class="bloque-elegirnos">
-        <p>
-            En Construcciones Ayc ofrecemos una gama excepcional de servicios de construcción y fabricación de estructuras metálicas en la Región de Los Lagos. 
-            Contamos con 30 años de experiencia, brindando calidad y economía.
-        </p>
-        <p>
-            Nos adaptamos a tus necesidades y asesoramos de acuerdo a lo que tienes en mente, entendiendo las exigencias de cada proyecto. 
-            Trabajamos con tus objetivos en mente para preparar la manera más eficiente posible, utilizando mano de obra y vehículos de alta resistencia técnica.
-        </p>
+        <p class="texto-peque">En Construcciones Ayc ofrecemos servicios de construcción y fabricación de estructuras metálicas en la Región de Los Lagos. Contamos con 30 años de experiencia, brindando calidad y economía.</p>
+        <p class="texto-peque">Nos adaptamos a tus necesidades y asesoramos según lo que tienes en mente, entendiendo las exigencias de cada proyecto. Trabajamos con tus objetivos para preparar la manera más eficiente posible, usando mano de obra y vehículos de alta resistencia técnica.</p>
     </div>
 </section>
 
@@ -95,9 +85,7 @@
     <div class="experiencia-contenido">
         <div class="texto">
             <h2>EXPERIENCIA EN TERRENO</h2>
-            <p>
-                Realizamos fabricación, montaje y colocaje de estructuras metálicas, galpones, techumbres y proyectos industriales, garantizando calidad, seguridad y cumplimiento de plazos en cada obra ejecutada.
-            </p>
+            <p>Realizamos fabricación, montaje y colocaje de estructuras metálicas, galpones, techumbres y proyectos industriales, garantizando calidad, seguridad y cumplimiento de plazos en cada obra ejecutada.</p>
         </div>
         <div class="imagen">
             <img src="images/obra2.jpg" alt="Experiencia en terreno">
@@ -107,30 +95,28 @@
 
 <!-- CONTACTO + MAPA -->
 <section class="contacto-mapa">
-    <div class="contacto-contenido">
-        <h2 class="titulo">CONTÁCTANOS</h2>
-        <div class="contacto-flex">
-            <!-- Formulario -->
-            <form class="form-contacto">
-                <input type="text" placeholder="Nombre" required>
-                <input type="email" placeholder="Correo electrónico" required>
-                <textarea placeholder="Mensaje" required></textarea>
-                <button type="submit">Enviar</button>
-            </form>
+    <h2 class="titulo">CONTÁCTANOS</h2>
+    <div class="contacto-flex">
+        <!-- Formulario -->
+        <form class="form-contacto">
+            <input type="text" placeholder="Nombre" required>
+            <input type="email" placeholder="Correo electrónico" required>
+            <textarea placeholder="Mensaje" required></textarea>
+            <button type="submit">Enviar</button>
+        </form>
 
-            <!-- Mapa -->
-            <iframe
-              src="https://www.google.com/maps?q=-40.5761897,-73.1149469&hl=es&z=15&output=embed"
-              width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy">
-            </iframe>
-        </div>
+        <!-- Mapa -->
+        <iframe
+          src="https://www.google.com/maps?q=-40.5761897,-73.1149469&hl=es&z=15&output=embed"
+          width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy">
+        </iframe>
+    </div>
 
-        <!-- Info de contacto -->
-        <div class="info-contacto">
-            <p><strong>Representante:</strong> Camila Bustamante J.</p>
-            <p><strong>Empresa:</strong> CONSTRUCCIONES AYC SPA</p>
-            <p>Fabricación, montaje y asesoría en estructuras metálicas</p>
-        </div>
+    <!-- Info de contacto -->
+    <div class="info-contacto">
+        <p><strong>Representante:</strong> Camila Bustamante J.</p>
+        <p><strong>Empresa:</strong> CONSTRUCCIONES AYC SPA</p>
+        <p>Fabricación, montaje y asesoría en estructuras metálicas</p>
     </div>
 </section>
 
