--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>CONSTRUCCIONES AYC SPA</title>
-<!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Roboto:wght@400;500&family=Open+Sans:wght@400&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
+<script defer src="script.js"></script>
 </head>
 <body>
 
@@ -36,21 +35,24 @@
             <div class="icono">🛠️</div>
             <h3>COMPROMISO Y CALIDAD</h3>
             <p>
-                NUESTRA PASIÓN POR LA CONSTRUCCIÓN NOS DISTINGUE. TRABAJAMOS CON ALTOS ESTÁNDARES DE CALIDAD CUMPLIENDO PLAZOS Y OPTIMIZANDO COSTOS.
+                NUESTRA PASION POR LA CONSTRUCCION NOS DISTINGUE. TRABAJAMOS CON ALTOS ESTANDARES DE CALIDAD CUMPLIENDO PLAZOS Y OPTIMIZANDO COSTOS. 
+                NUESTRO COMPROMISO ES ENTREGAR RESULTADOS QUE SUPEREN TUS EXPECTATIVAS.
             </p>
         </div>
         <div class="card">
             <div class="icono">📐</div>
-            <h3>ASESORÍA TÉCNICA</h3>
+            <h3>ASESORIA TECNICA</h3>
             <p>
-                TE ASESORAMOS DESDE EL PRIMER MOMENTO. ANALIZAMOS TUS IDEAS Y LO TRANSFORMAMOS EN UN GRAN PROYECTO.
+                TE ASESORAMOS DESDE EL PRIMER MOMENTO. ANALIZAMOS TUS IDEAS Y LO TRANSFORMAMOS EN UN GRAN PROYECTO. 
+                GUIANDOTE EN CADA ETAPA PARA GARANTIZAR UNA EJECUCION PRECISA Y ACORDE A TUS REQUERIMIENTOS.
             </p>
         </div>
         <div class="card">
             <div class="icono">👷</div>
             <h3>MANO DE OBRA CALIFICADA</h3>
             <p>
-                CONTAMOS CON UN EQUIPO EXPERTO EN FABRICACIÓN Y MONTAJE DE ESTRUCTURAS METÁLICAS, DEMOSTRANDO PROFESIONALISMO EN CADA PROYECTO.
+                CONTAMOS CON UN EQUIPO EXPERTO EN FABRICACION Y MONTAJE DE ESTRUCTURAS METALICAS, CON AMPLIA EXPERIENCIA. 
+                DESDE SOLDADORES, MONTAJISTAS Y JEFE DE TERRENO, DEMOSTRANDO PROFESIONALISMO EN CADA PROYECTO.
             </p>
         </div>
     </div>
@@ -58,10 +60,26 @@
 
 <!-- POR QUE ELEGIRNOS -->
 <section class="porque-elegirnos">
-    <h2 class="titulo">¿Por Qué Elegirnos?</h2>
-    <div class="bloque-elegirnos">
-        <p class="texto-peque">En Construcciones Ayc ofrecemos servicios de construcción y fabricación de estructuras metálicas en la Región de Los Lagos. Contamos con 30 años de experiencia, brindando calidad y economía.</p>
-        <p class="texto-peque">Nos adaptamos a tus necesidades y asesoramos según lo que tienes en mente, entendiendo las exigencias de cada proyecto. Trabajamos con tus objetivos para preparar la manera más eficiente posible, usando mano de obra y vehículos de alta resistencia técnica.</p>
+    <h2 class="titulo">¿POR QUÉ ELEGIRNOS?</h2>
+    <div class="porque-cards">
+        <div class="card-pe">
+            <h3>Experiencia y Profesionalismo</h3>
+            <p>
+                Más de 30 años de experiencia en construcción y fabricación de estructuras metálicas en la Región de Los Lagos.
+            </p>
+        </div>
+        <div class="card-pe">
+            <h3>Calidad Garantizada</h3>
+            <p>
+                Nos aseguramos de entregar proyectos con altos estándares de calidad, cumpliendo con plazos y optimizando costos.
+            </p>
+        </div>
+        <div class="card-pe">
+            <h3>Asesoría Personalizada</h3>
+            <p>
+                Te guiamos en cada etapa, adaptándonos a tus necesidades y objetivos para lograr un proyecto eficiente y seguro.
+            </p>
+        </div>
     </div>
 </section>
 
@@ -85,7 +103,9 @@
     <div class="experiencia-contenido">
         <div class="texto">
             <h2>EXPERIENCIA EN TERRENO</h2>
-            <p>Realizamos fabricación, montaje y colocaje de estructuras metálicas, galpones, techumbres y proyectos industriales, garantizando calidad, seguridad y cumplimiento de plazos en cada obra ejecutada.</p>
+            <p>
+                Realizamos fabricación, montaje y colocaje de estructuras metálicas, galpones, techumbres y proyectos industriales, garantizando calidad, seguridad y cumplimiento de plazos en cada obra ejecutada.
+            </p>
         </div>
         <div class="imagen">
             <img src="images/obra2.jpg" alt="Experiencia en terreno">
@@ -106,10 +126,12 @@
         </form>
 
         <!-- Mapa -->
-        <iframe
-          src="https://www.google.com/maps?q=-40.5761897,-73.1149469&hl=es&z=15&output=embed"
-          width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy">
-        </iframe>
+        <div class="mapa-container">
+            <iframe
+              src="https://www.google.com/maps?q=-40.5761897,-73.1149469&hl=es&z=15&output=embed"
+              style="border:0;" allowfullscreen="" loading="lazy">
+            </iframe>
+        </div>
     </div>
 
     <!-- Info de contacto -->
