--- a/index.html
+++ b/index.html
@@ -9,21 +9,33 @@
 </head>
 <body>
 
-<!-- HEADER -->
+<!-- HEADER + NAVBAR -->
 <header class="header">
     <div class="header-container">
         <img src="images/logo.jpeg" alt="Logo AYC" class="logo">
+
         <div class="empresa">
             <h1>CONSTRUCCIONES AYC SPA</h1>
+            <p class="telefono">📞 +56 9 8730 8343 | Osorno, Región de Los Lagos</p>
         </div>
+
+        <nav class="nav">
+            <a href="#inicio">Inicio</a>
+            <a href="#servicios">Servicios</a>
+            <a href="#proyectos">Proyectos</a>
+            <a href="#contacto">Contacto</a>
+        </nav>
     </div>
 </header>
 
 <!-- HERO -->
-<section class="hero">
+<section class="hero" id="inicio">
     <div class="hero-overlay">
-        <h2>ESTRUCTURAS METÁLICAS Y CONSTRUCCIÓN</h2>
-        <p>Calidad, compromiso y profesionalismo en cada proyecto</p>
+        <h2>ESTRUCTURAS METÁLICAS Y CONSTRUCCIÓN EN LOS LAGOS</h2>
+        <p>Más de 30 años de experiencia en fabricación, montaje y proyectos industriales</p>
+        <a href="https://wa.me/56987308343?text=Hola,%20quiero%20cotizar%20un%20proyecto" class="btn-cta" target="_blank">
+            COTIZAR POR WHATSAPP
+        </a>
     </div>
 </section>
 
@@ -34,90 +46,67 @@
         <div class="card">
             <div class="icono">🛠️</div>
             <h3>COMPROMISO Y CALIDAD</h3>
-            <p>
-                NUESTRA PASION POR LA CONSTRUCCION NOS DISTINGUE. TRABAJAMOS CON ALTOS ESTANDARES DE CALIDAD CUMPLIENDO PLAZOS Y OPTIMIZANDO COSTOS. 
-                NUESTRO COMPROMISO ES ENTREGAR RESULTADOS QUE SUPEREN TUS EXPECTATIVAS.
-            </p>
+            <p>Trabajamos con altos estándares de calidad, cumpliendo plazos y optimizando costos en cada proyecto.</p>
         </div>
+
         <div class="card">
             <div class="icono">📐</div>
-            <h3>ASESORIA TECNICA</h3>
-            <p>
-                TE ASESORAMOS DESDE EL PRIMER MOMENTO. ANALIZAMOS TUS IDEAS Y LO TRANSFORMAMOS EN UN GRAN PROYECTO. 
-                GUIANDOTE EN CADA ETAPA PARA GARANTIZAR UNA EJECUCION PRECISA Y ACORDE A TUS REQUERIMIENTOS.
-            </p>
+            <h3>ASESORÍA TÉCNICA</h3>
+            <p>Te guiamos desde el inicio del proyecto para lograr una ejecución precisa y acorde a tus necesidades.</p>
         </div>
+
         <div class="card">
             <div class="icono">👷</div>
             <h3>MANO DE OBRA CALIFICADA</h3>
-            <p>
-                CONTAMOS CON UN EQUIPO EXPERTO EN FABRICACION Y MONTAJE DE ESTRUCTURAS METALICAS, CON AMPLIA EXPERIENCIA. 
-                DESDE SOLDADORES, MONTAJISTAS Y JEFE DE TERRENO, DEMOSTRANDO PROFESIONALISMO EN CADA PROYECTO.
-            </p>
+            <p>Equipo experto en fabricación y montaje de estructuras metálicas con amplia experiencia en terreno.</p>
         </div>
     </div>
 </section>
 
-<!-- POR QUE ELEGIRNOS -->
-<section class="porque-elegirnos">
-    <h2 class="titulo">¿POR QUÉ ELEGIRNOS?</h2>
-    <div class="porque-cards">
-        <div class="card-pe">
-            <h3>Experiencia y Profesionalismo</h3>
-            <p>
-                Más de 30 años de experiencia en construcción y fabricación de estructuras metálicas en la Región de Los Lagos.
-            </p>
+<!-- SERVICIOS -->
+<section class="servicios" id="servicios">
+    <h2 class="titulo">NUESTROS SERVICIOS</h2>
+    <div class="cards">
+        <div class="card">
+            <h3>🏗️ Estructuras Metálicas</h3>
+            <p>Fabricación y montaje de estructuras metálicas industriales y comerciales.</p>
         </div>
-        <div class="card-pe">
-            <h3>Calidad Garantizada</h3>
-            <p>
-                Nos aseguramos de entregar proyectos con altos estándares de calidad, cumpliendo con plazos y optimizando costos.
-            </p>
+
+        <div class="card">
+            <h3>🏭 Galpones Metálicos</h3>
+            <p>Diseño, fabricación y montaje de galpones metálicos de alta resistencia.</p>
         </div>
-        <div class="card-pe">
-            <h3>Asesoría Personalizada</h3>
-            <p>
-                Te guiamos en cada etapa, adaptándonos a tus necesidades y objetivos para lograr un proyecto eficiente y seguro.
-            </p>
+
+        <div class="card">
+            <h3>🔧 Montaje y Soldadura</h3>
+            <p>Montaje estructural y soldadura profesional en terreno.</p>
+        </div>
+
+        <div class="card">
+            <h3>🏠 Techumbres</h3>
+            <p>Instalación de techumbres metálicas y proyectos industriales completos.</p>
         </div>
     </div>
 </section>
 
 <!-- GALERÍA -->
-<section class="galeria">
+<section class="galeria" id="proyectos">
     <h2 class="titulo">NUESTROS PROYECTOS</h2>
     <div class="galeria-grid">
-        <img src="images/obra1.jpeg" alt="Obra 1">
-        <img src="images/obra2.jpg" alt="Obra 2">
-        <img src="images/obra3.jpg" alt="Obra 3">
-        <img src="images/obra4.jpg" alt="Obra 4">
-        <img src="images/obra5.jpg" alt="Obra 5">
-        <img src="images/obra6.jpg" alt="Obra 6">
-        <img src="images/montaje-termoacustic.jpeg" alt="Montaje termoacústico">
-        <img src="images/captura.png" alt="Detalle proyecto">
+        <img src="images/obra1.jpeg" alt="Proyecto 1">
+        <img src="images/obra2.jpg" alt="Proyecto 2">
+        <img src="images/obra3.jpg" alt="Proyecto 3">
+        <img src="images/obra4.jpg" alt="Proyecto 4">
+        <img src="images/obra5.jpg" alt="Proyecto 5">
+        <img src="images/obra6.jpg" alt="Proyecto 6">
     </div>
 </section>
 
-<!-- EXPERIENCIA -->
-<section class="experiencia">
-    <div class="experiencia-contenido">
-        <div class="texto">
-            <h2>EXPERIENCIA EN TERRENO</h2>
-            <p>
-                Realizamos fabricación, montaje y colocaje de estructuras metálicas, galpones, techumbres y proyectos industriales, garantizando calidad, seguridad y cumplimiento de plazos en cada obra ejecutada.
-            </p>
-        </div>
-        <div class="imagen">
-            <img src="images/obra2.jpg" alt="Experiencia en terreno">
-        </div>
-    </div>
-</section>
-
-<!-- CONTACTO + MAPA -->
-<section class="contacto-mapa">
+<!-- CONTACTO -->
+<section class="contacto-mapa" id="contacto">
     <h2 class="titulo">CONTÁCTANOS</h2>
+
     <div class="contacto-flex">
-        <!-- Formulario -->
         <form class="form-contacto">
             <input type="text" placeholder="Nombre" required>
             <input type="email" placeholder="Correo electrónico" required>
@@ -125,23 +114,25 @@
             <button type="submit">Enviar</button>
         </form>
 
-        <!-- Mapa -->
         <div class="mapa-container">
             <iframe
-              src="https://www.google.com/maps?q=-40.5761897,-73.1149469&hl=es&z=15&output=embed"
-              style="border:0;" allowfullscreen="" loading="lazy">
-            </iframe>
+            src="https://www.google.com/maps?q=-40.5761897,-73.1149469&hl=es&z=15&output=embed"
+            style="border:0;" loading="lazy"></iframe>
         </div>
     </div>
 
-    <!-- Info de contacto -->
     <div class="info-contacto">
         <p><strong>Empresa:</strong> CONSTRUCCIONES AYC SPA</p>
+        <p><strong>Ubicación:</strong> Osorno, Región de Los Lagos - Chile</p>
+        <p><strong>Teléfono:</strong> +56 9 8730 8343</p>
         <p>Fabricación, montaje y asesoría en estructuras metálicas</p>
     </div>
 </section>
 
-<!-- FOOTER -->
+<!-- WHATSAPP FLOTANTE -->
+<a href="https://wa.me/56987308343?text=Hola,%20quiero%20cotizar%20un%20proyecto%20de%20estructura%20metálica" 
+class="whatsapp-float" target="_blank">💬</a>
+
 <footer class="footer">
     <p>© 2026 CONSTRUCCIONES AYC SPA | Estructuras Metálicas y Construcción</p>
 </footer>
