Actualización completa: diseño tipografía, Por Qué Elegirnos, galería, experiencia, contacto y mapa

--- a/index.html
+++ b/index.html
@@ -1,141 +1,209 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>CONSTRUCCIONES AYC SPA</title>
-<link rel="stylesheet" href="style.css">
-<script defer src="script.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Construcciones AYC | Estructuras Metálicas</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<!-- HEADER + NAVBAR -->
+<!-- HEADER PROFESIONAL -->
 <header class="header">
     <div class="header-container">
-        <img src="images/logo.jpeg" alt="Logo AYC" class="logo">
-
-        <div class="empresa">
-            <h1>CONSTRUCCIONES AYC SPA</h1>
-            <p class="telefono">📞 +56 9 8730 8343 | Osorno, Región de Los Lagos</p>
+        <div class="logo-area">
+            <img src="images/logo.jpeg" alt="Logo AYC" class="logo">
+            <div class="empresa">
+                <h1>CONSTRUCCIONES AYC SPA</h1>
+                <p>Estructuras metálicas y construcción profesional</p>
+            </div>
         </div>
 
         <nav class="nav">
             <a href="#inicio">Inicio</a>
             <a href="#servicios">Servicios</a>
             <a href="#proyectos">Proyectos</a>
-            <a href="#contacto">Contacto</a>
+            <a href="#empresa">Empresa</a>
+            <a href="#contacto" class="btn-nav">Contacto</a>
         </nav>
     </div>
 </header>
 
-<!-- HERO -->
+<!-- HERO / PORTADA -->
 <section class="hero" id="inicio">
     <div class="hero-overlay">
-        <h2>ESTRUCTURAS METÁLICAS Y CONSTRUCCIÓN EN LOS LAGOS</h2>
-        <p>Más de 30 años de experiencia en fabricación, montaje y proyectos industriales</p>
-        <a href="https://wa.me/56987308343?text=Hola,%20quiero%20cotizar%20un%20proyecto" class="btn-cta" target="_blank">
-            COTIZAR POR WHATSAPP
-        </a>
+        <h2>CONSTRUCCIÓN Y ESTRUCTURAS METÁLICAS</h2>
+        <p>
+            Compromiso, calidad y profesionalismo en cada proyecto.
+            Desarrollamos soluciones estructurales sólidas y duraderas.
+        </p>
+        <a href="#contacto" class="btn-principal">Solicitar Cotización</a>
     </div>
 </section>
 
-<!-- VALORES -->
-<section class="valores">
-    <h2 class="titulo">NUESTROS VALORES</h2>
-    <div class="cards">
-        <div class="card">
-            <div class="icono">🛠️</div>
-            <h3>COMPROMISO Y CALIDAD</h3>
-            <p>Trabajamos con altos estándares de calidad, cumpliendo plazos y optimizando costos en cada proyecto.</p>
+<!-- SECCIÓN EMPRESA -->
+<section class="empresa-section" id="empresa">
+    <div class="empresa-container">
+        <div class="empresa-texto">
+            <h2>Sobre Nuestra Empresa</h2>
+            <p>
+                Construcciones AYC SPA es una empresa dedicada a la fabricación,
+                montaje y ejecución de proyectos en estructuras metálicas y obras
+                de construcción. Nos caracterizamos por entregar trabajos de alta
+                calidad, cumpliendo plazos y estándares exigentes en cada proyecto.
+            </p>
+            <p>
+                Nuestro enfoque está basado en la responsabilidad, la seguridad
+                en terreno y la eficiencia técnica, garantizando resultados
+                sólidos que responden a las necesidades reales de cada cliente.
+            </p>
         </div>
 
-        <div class="card">
-            <div class="icono">📐</div>
-            <h3>ASESORÍA TÉCNICA</h3>
-            <p>Te guiamos desde el inicio del proyecto para lograr una ejecución precisa y acorde a tus necesidades.</p>
-        </div>
-
-        <div class="card">
-            <div class="icono">👷</div>
-            <h3>MANO DE OBRA CALIFICADA</h3>
-            <p>Equipo experto en fabricación y montaje de estructuras metálicas con amplia experiencia en terreno.</p>
+        <div class="empresa-img">
+            <img src="images/obra3.jpg" alt="Trabajo en obra">
         </div>
     </div>
 </section>
 
-<!-- SERVICIOS -->
+<!-- SERVICIOS PROFESIONALES -->
 <section class="servicios" id="servicios">
     <h2 class="titulo">NUESTROS SERVICIOS</h2>
-    <div class="cards">
-        <div class="card">
-            <h3>🏗️ Estructuras Metálicas</h3>
-            <p>Fabricación y montaje de estructuras metálicas industriales y comerciales.</p>
+
+    <div class="servicios-grid">
+        <div class="servicio-card">
+            <h3>COMPROMISO Y CALIDAD</h3>
+            <p>
+                Nuestra pasión por la construcción nos distingue. Trabajamos con
+                altos estándares de calidad cumpliendo plazos y optimizando costos,
+                garantizando resultados profesionales en cada obra ejecutada.
+            </p>
         </div>
 
-        <div class="card">
-            <h3>🏭 Galpones Metálicos</h3>
-            <p>Diseño, fabricación y montaje de galpones metálicos de alta resistencia.</p>
+        <div class="servicio-card">
+            <h3>ASESORÍA TÉCNICA</h3>
+            <p>
+                Asesoramos desde el primer momento, analizando cada idea del cliente
+                y transformándola en un proyecto viable, eficiente y estructuralmente
+                seguro.
+            </p>
         </div>
 
-        <div class="card">
-            <h3>🔧 Montaje y Soldadura</h3>
-            <p>Montaje estructural y soldadura profesional en terreno.</p>
+        <div class="servicio-card">
+            <h3>MANO DE OBRA CALIFICADA</h3>
+            <p>
+                Contamos con personal especializado en fabricación, soldadura y
+                montaje de estructuras metálicas, con experiencia en terreno y
+                profesionalismo en cada etapa del proyecto.
+            </p>
         </div>
 
-        <div class="card">
-            <h3>🏠 Techumbres</h3>
-            <p>Instalación de techumbres metálicas y proyectos industriales completos.</p>
+        <div class="servicio-card">
+            <h3>ESTRUCTURAS METÁLICAS</h3>
+            <p>
+                Fabricación y montaje de galpones, estructuras industriales,
+                techumbres y soluciones metálicas adaptadas a cada necesidad.
+            </p>
+        </div>
+
+        <div class="servicio-card">
+            <h3>MONTAJE TERMOACÚSTICO</h3>
+            <p>
+                Instalación de soluciones termoacústicas para proyectos industriales
+                y comerciales, garantizando eficiencia térmica y durabilidad.
+            </p>
+        </div>
+
+        <div class="servicio-card">
+            <h3>PROYECTOS A MEDIDA</h3>
+            <p>
+                Diseñamos y ejecutamos proyectos personalizados según los
+                requerimientos del cliente, optimizando materiales, costos y tiempos
+                de ejecución.
+            </p>
         </div>
     </div>
 </section>
 
-<!-- GALERÍA -->
-<section class="galeria" id="proyectos">
+<!-- GALERÍA DE PROYECTOS (SIN OBRA 7) -->
+<section class="proyectos" id="proyectos">
     <h2 class="titulo">NUESTROS PROYECTOS</h2>
+
     <div class="galeria-grid">
-        <img src="images/obra1.jpeg" alt="Proyecto 1">
-        <img src="images/obra2.jpg" alt="Proyecto 2">
-        <img src="images/obra3.jpg" alt="Proyecto 3">
-        <img src="images/obra4.jpg" alt="Proyecto 4">
-        <img src="images/obra5.jpg" alt="Proyecto 5">
-        <img src="images/obra6.jpg" alt="Proyecto 6">
+        <img src="images/obra1.jpeg" alt="Proyecto construcción 1">
+        <img src="images/obra2.jpg" alt="Proyecto construcción 2">
+        <img src="images/obra3.jpg" alt="Proyecto construcción 3">
+        <img src="images/obra4.jpg" alt="Proyecto construcción 4">
+        <img src="images/obra5.jpg" alt="Proyecto construcción 5">
+        <img src="images/obra6.jpg" alt="Proyecto construcción 6">
+        <img src="images/montaje-termoacustic.jpeg" alt="Montaje termoacústico">
     </div>
 </section>
 
-<!-- CONTACTO -->
-<section class="contacto-mapa" id="contacto">
-    <h2 class="titulo">CONTÁCTANOS</h2>
+<!-- PROCESO DE TRABAJO -->
+<section class="proceso">
+    <h2 class="titulo">NUESTRO PROCESO DE TRABAJO</h2>
 
-    <div class="contacto-flex">
-        <form class="form-contacto">
-            <input type="text" placeholder="Nombre" required>
-            <input type="email" placeholder="Correo electrónico" required>
-            <textarea placeholder="Mensaje" required></textarea>
-            <button type="submit">Enviar</button>
-        </form>
+    <div class="proceso-grid">
+        <div class="paso">
+            <span>01</span>
+            <h4>Evaluación del Proyecto</h4>
+            <p>Analizamos los requerimientos y condiciones técnicas de la obra.</p>
+        </div>
 
-        <div class="mapa-container">
-            <iframe
-            src="https://www.google.com/maps?q=-40.5761897,-73.1149469&hl=es&z=15&output=embed"
-            style="border:0;" loading="lazy"></iframe>
+        <div class="paso">
+            <span>02</span>
+            <h4>Planificación</h4>
+            <p>Organizamos recursos, materiales y tiempos de ejecución.</p>
+        </div>
+
+        <div class="paso">
+            <span>03</span>
+            <h4>Ejecución en Terreno</h4>
+            <p>Desarrollo del proyecto con personal calificado y supervisión.</p>
+        </div>
+
+        <div class="paso">
+            <span>04</span>
+            <h4>Entrega Final</h4>
+            <p>Entrega del proyecto cumpliendo estándares de calidad y seguridad.</p>
         </div>
     </div>
+</section>
 
-    <div class="info-contacto">
-        <p><strong>Empresa:</strong> CONSTRUCCIONES AYC SPA</p>
-        <p><strong>Ubicación:</strong> Osorno, Región de Los Lagos - Chile</p>
-        <p><strong>Teléfono:</strong> +56 9 8730 8343</p>
-        <p>Fabricación, montaje y asesoría en estructuras metálicas</p>
+<!-- CONTACTO PROFESIONAL -->
+<section class="contacto" id="contacto">
+    <h2 class="titulo">CONTACTO</h2>
+
+    <div class="contacto-container">
+        <div class="contacto-info">
+            <h3>Construcciones AYC SPA.</h3>
+            <p class="telefono">+56 9 8730 8343</p>
+            <p>
+                Contáctanos para cotizaciones, asesoría técnica y desarrollo de
+                proyectos en estructuras metálicas y construcción.
+            </p>
+
+            <a href="https://wa.me/56987308343" target="_blank" class="btn-whatsapp">
+                Contactar por WhatsApp
+            </a>
+        </div>
+
+        <div class="contacto-img">
+            <img src="images/obra2.jpg" alt="Equipo de construcción">
+        </div>
     </div>
 </section>
 
-<!-- WHATSAPP FLOTANTE -->
-<a href="https://wa.me/56987308343?text=Hola,%20quiero%20cotizar%20un%20proyecto%20de%20estructura%20metálica" 
-class="whatsapp-float" target="_blank">💬</a>
+<!-- BOTÓN FLOTANTE WHATSAPP -->
+<a href="https://wa.me/56987308343" class="whatsapp-float" target="_blank">
+    💬
+</a>
 
+<!-- FOOTER -->
 <footer class="footer">
-    <p>© 2026 CONSTRUCCIONES AYC SPA | Estructuras Metálicas y Construcción</p>
+    <p>© 2026 Construcciones AYC SPA - Todos los derechos reservados</p>
 </footer>
 
+<script src="script.js"></script>
 </body>
 </html>
